# fglt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson_options.txt  paper.md  references.bib  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci_build.yml  ci_meson.yml  ci_python_demo.yml  tests.yml
MATLAB/: createRandRegGraph.m  demo.m  fglt.m  fgltmake.m  fgtmake.m  graphletName.m  runManyTests.m
MATLAB/data/: testGraph06.mat  testGraph07.mat  testGraph10.mat  testGraph12.mat
MATLAB/mexfunctions/: fglt.cpp
MATLAB/private/: raw2net.m
docs/: MAINPAGE.md  Makefile  doxygen.config
lib/: Makefile.am  Makefile.in  fglt.cpp  fglt.hpp
python/: demo.py  fglt.py
python-wrapper/: README.md  demo.py  driver.py  fglt.py
python-wrapper/GD96_c/: GD96_c_coord.mtx  GD96_c_nodename.txt
src/: Makefile.am  Makefile.in  fglt_mtx.cpp
testdata/: download_benchmark_mtx.sh  meson.build  s12.mtx  s12_freq_net_gold.csv  s6.mtx  s6_freq_net_gold.csv  test_s12.sh  test_s6.sh
testsuite/: UnitTests.jl
